Sample style with config, mixins and function demo

--- a/Resources/Styles/Base/Mixins/_grid.scss
+++ b/Resources/Styles/Base/Mixins/_grid.scss
@@ -4,11 +4,11 @@
     display: grid;
 
     @if $cols != 0 {
-        grid-template-columns: repeat($cols, unquote($size));
+        grid-template-columns: repeat($cols, $size);
     }
 
     @if $rows != 0 {
-        grid-template-columns: repeat($rows, unquote($size));
+        grid-template-columns: repeat($rows, $size);
     }
 
     @if $gap != 0 {
