--- a/Resources/Styles/Base/Configs/fonts.scss
+++ b/Resources/Styles/Base/Configs/fonts.scss
@@ -2,7 +2,7 @@
 @use "../Mixins/font";
 
 
-$font-path: "/Resources/Fonts/Soleil";
+$font-path: "/Resources/Fonts/*";
 $font-name: Arial;
 
 $style: normal !default;
