--- a/Resources/Styles/Base/Configs/sizes.scss
+++ b/Resources/Styles/Base/Configs/sizes.scss
@@ -8,6 +8,7 @@ $gap-xxl: 40px;
 $gap: $gap-m;
 
 $border-radius: 0px;
+$border-width: 1px;
 
 // All devices width for responsivity
 $width-mobile: 560px;
