--- a/Resources/Styles/style.scss
+++ b/Resources/Styles/style.scss
@@ -1,13 +1,19 @@
-﻿@use "./Base/reset";
+﻿@use "./Base/Configs/fonts";
+@use "./Base/Configs/colors";
+@use "./Base/Configs/sizes";
+@use "./Base/reset";
 @use "./Base/variables";
 @use "./Base/classes";
-@use "./Base/Configs/fonts";
-@use "./Base/Configs/bp";
+
+:root {
+    @include colors.generate;
+    @include sizes.generate;
+}
 
 @at-root {
     //@include fonts.createFont;
     @include variables.generate;
     @include reset.reset;
-    @include bp.resetBpVariables;
     @include classes.createClasses;
 }
+
